--- a/demo-worker/build.gradle
+++ b/demo-worker/build.gradle
@@ -10,5 +10,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.kafka:spring-kafka"
 
+    implementation 'com.datadoghq:dd-trace-api'
+
     implementation "org.apache.commons:commons-lang3"
 }
