Manual tracing using OpenTracing to Datadog

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ subprojects {
         }
 
         dependencies {
+            dependency "io.opentracing:opentracing-api:0.31.0"
+            dependency "io.opentracing:opentracing-util:0.31.0"
+            dependency "com.datadoghq:dd-trace-ot:0.24.1"
+            dependency "com.datadoghq:dd-trace-api:0.24.1"
+
             dependency "ch.qos.logback.contrib:logback-json-classic:0.1.5"
             dependency "ch.qos.logback.contrib:logback-jackson:0.1.5"
 
