--- a/ops/docker/demo/docker-compose.yml
+++ b/ops/docker/demo/docker-compose.yml
@@ -7,19 +7,43 @@ services:
       - DD_JMXFETCH_ENABLED=true # Enable fetching of metrics through JMX
       - DD_JMXFETCH_STATSD_HOST=datadog # Hostname where Datadog agent is running
       - DD_LOGS_INJECTION=true # Inject trace and span id's in logs
+      - DD_SERVICE_MAPPING=kafka:demo-web
       - DD_SERVICE_NAME=demo-web # Service name of this app in Datadog
       - DD_TRACE_GLOBAL_TAGS=env:demo # Add env tag with value demo to group APM stats
       - JAVA_OPTS=-javaagent:/opt/datadog/dd-java-agent.jar -Ddatadog.slf4j.simpleLogger.defaultLogLevel=info # Enable the enable the datadog java agent and set datadog agent log level to info
     ports:
-      - "8080:8080"
-  demo-worker:
-    image: demo/demo-worker:1.0.0
+      - "8080:8000"
+  demo-worker1:
+    image: demo/demo-worker1:1.0.0
     environment:
       - DD_AGENT_HOST=datadog # Hostname where Datadog agent is running
       - DD_JMXFETCH_ENABLED=true # Enable fetching of metrics through JMX
       - DD_JMXFETCH_STATSD_HOST=datadog # Hostname where Datadog agent is running
       - DD_LOGS_INJECTION=true # Inject trace and span id's in logs
-      - DD_SERVICE_NAME=demo-worker # Service name of this app in Datadog
+      - DD_SERVICE_MAPPING=kafka:demo-worker1
+      - DD_SERVICE_NAME=demo-worker1 # Service name of this app in Datadog
+      - DD_TRACE_GLOBAL_TAGS=env:demo # Add env tag with value demo to group APM stats
+      - JAVA_OPTS=-javaagent:/opt/datadog/dd-java-agent.jar -Ddatadog.slf4j.simpleLogger.defaultLogLevel=info # Enable the enable the datadog java agent and set datadog agent log level to info
+  demo-worker2:
+    image: demo/demo-worker2:1.0.0
+    environment:
+      - DD_AGENT_HOST=datadog # Hostname where Datadog agent is running
+      - DD_JMXFETCH_ENABLED=true # Enable fetching of metrics through JMX
+      - DD_JMXFETCH_STATSD_HOST=datadog # Hostname where Datadog agent is running
+      - DD_LOGS_INJECTION=true # Inject trace and span id's in logs
+      - DD_SERVICE_MAPPING=kafka:demo-worker2
+      - DD_SERVICE_NAME=demo-worker2 # Service name of this app in Datadog
+      - DD_TRACE_GLOBAL_TAGS=env:demo # Add env tag with value demo to group APM stats
+      - JAVA_OPTS=-javaagent:/opt/datadog/dd-java-agent.jar -Ddatadog.slf4j.simpleLogger.defaultLogLevel=info # Enable the enable the datadog java agent and set datadog agent log level to info
+  demo-worker3:
+    image: demo/demo-worker3:1.0.0
+    environment:
+      - DD_AGENT_HOST=datadog # Hostname where Datadog agent is running
+      - DD_JMXFETCH_ENABLED=true # Enable fetching of metrics through JMX
+      - DD_JMXFETCH_STATSD_HOST=datadog # Hostname where Datadog agent is running
+      - DD_LOGS_INJECTION=true # Inject trace and span id's in logs
+      - DD_SERVICE_MAPPING=kafka:demo-worker3
+      - DD_SERVICE_NAME=demo-worker3 # Service name of this app in Datadog
       - DD_TRACE_GLOBAL_TAGS=env:demo # Add env tag with value demo to group APM stats
       - JAVA_OPTS=-javaagent:/opt/datadog/dd-java-agent.jar -Ddatadog.slf4j.simpleLogger.defaultLogLevel=info # Enable the enable the datadog java agent and set datadog agent log level to info
 networks:
